Kubernetes/Developers/Ingress_Controller/chatGPT/Namespace.yaml
# nginx-ingress-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
